--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="activity_new_exercise_label">Create Exercise</string>
     <string name="activity_exercise_settings_label">Edit Exercise</string>
     <string name="activity_settings_label">Settings</string>
-    
+
     <!-- Extras -->
     <string name="extra_new_exercise">com.grassyass.touchsomegrass.extra.NEW_EXERCISE</string>
+    <string name="extra_edit_exercise">com.grassyass.touchsomegrass.extra.EDIT_EXERCISE</string>
 </resources>
